# research

./: .mise.toml  pyproject.toml  renovate.json
.github/: sync-config.yml
.github/workflows/: smyklot-poll.yml  smyklot-pr-commands.yml  sync-trigger.yml
