[project]
name = "smykla-skalski-research"
version = "0.1.0"
description = "Knowledge base and research artifacts for investigations, experiments, and learnings"
requires-python = ">=3.11"
dependencies = [
    # macOS window/screenshot skills
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-ScreenCaptureKit>=10.0",
    "pyobjc-framework-AVFoundation>=10.0",
    "psutil>=5.9",
    "pillow>=10.0",
    "imagehash>=4.3",
    # UI detection skills
    "easyocr>=1.7",
    "atomacos>=3.2",
    # CLI framework
    "typer>=0.15.0",
    # Browser automation
    "websockets>=12.0",
    "marionette-driver>=3.2",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv]
# Script-only workspace, no package to build
package = false

[tool.uv.workspace]
members = ["claude-code/skills/*"]
exclude = ["claude-code/skills/_bin", "claude-code/skills/_shared"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "S603",   # subprocess-without-shell-equals-true (we need subprocess)
    "S607",   # start-process-with-partial-path (plutil/osascript are system tools)
]

[tool.ruff.lint.pylint]
max-args = 5      # Helpers must comply; @app.command functions use noqa: PLR0913
max-returns = 7   # CLI main functions with multiple subcommands need more returns

[tool.ruff.lint.per-file-ignores]
# Typer CLI files: B008 (function call in defaults) is false positive for typer.Option/Argument
"claude-code/skills/**/cli.py" = ["B008"]
# Allow print statements in skill packages (CLI output)
"**/space_finder/*.py" = ["T201"]
"**/screen_recorder/*.py" = ["T201", "PLC0415"]  # Allow print + lazy imports (Quartz/ffmpeg)
"**/verified_screenshot/*.py" = ["T201", "PLC0415"]  # Allow print + lazy imports
"**/window_controller/*.py" = ["T201", "PLC0415"]  # Allow print + lazy imports (Quartz/psutil)
"**/ocr_finder/*.py" = ["T201", "PLC0415"]  # Allow print + lazy imports (EasyOCR is slow)
"**/ui_inspector/*.py" = ["T201"]
"**/browser_controller/*.py" = ["T201", "PLC0415", "S310", "S110", "SIM105", "PLR2004"]  # Allow print + lazy imports + urlopen + try-except-pass + magic values
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "PLR2004", # Allow magic values in tests
    "ARG001",  # Allow unused function arguments (mock side effects)
    "ARG002",  # Allow unused method arguments (fixtures)
    "RUF001",  # Allow ambiguous characters in test strings
    "SIM117",  # Allow nested with statements (pytest.raises with context managers)
    "S108",    # Allow hardcoded /tmp paths in tests
    "PLC0415", # Allow imports inside functions (delayed import for slow packages like EasyOCR)
    "PLW1510", # Allow subprocess.run without check (tests handle return codes manually)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
# Third-party packages without type stubs
module = ["plistlib", "Quartz", "psutil", "PIL", "imagehash", "easyocr", "atomacos", "ScreenCaptureKit", "websockets", "marionette_driver.*"]
ignore_missing_imports = true
